    library).  PEL detects the location of the Erlang root directory with the
    provided erlang-root-dir Erlang script (see next).
  - New: [[bin/erlang-root-dir][bin/erlang-root-dir]] Erlang script detects and returns Erlang’s root directory.
  - Improved: [[bin/version-erl][bin/version-erl]] script longer prints SASL progress information when
    older versions of Erlang are used.
  - New: add support for ivy-erlang-complete when *pel-use-ivy-erlang-complete*
    user-option is turned on (t).
  - New: add support for erlstack-mode when *pel-use-erlstack-mode* user-option
    is turned on.
  - New: Add smartparens support when *pel-use-smartparens* is turned on.
    Automatically activate smartparens support for Erlang by adding
    `smartparens-mode` to the list of *pel-erlang-activates-minor-modes*.
    - New: Fixed behaviour of some of the smartparens code transformation functions
      by using the post processing capability provided by smartparens sp-pair
      definition mechanism but also by creating function wrappers to overcome
      the current limitations of smartparens pre-handlers and post-handlers.
    - New: Add automatic pairing of `<< >>` to smartparens-mode used in erlang-mode
      buffers. Also add navigation across these pairs by replacing *forward-sexp*
      by *pel-erlang-forward-sexp* and *backward-sexp* by
      *pel-erlang-backward-sexp*.  The PEL commands use the same bindings and
      handle the Erlang ``<< >>`` bit syntax pairs, something the erlang-mode
      does not do by itself.
    - New: Improved management of display rendering of hard tab characters and
      control of hard tab insertion:  the new *pel-erlang-tab-width*
      user-option controls the display rendering of hard tabs located inside
      Erlang source code, and the *pel-erlang-use-tabs* user-option controls
      whether indentation inserts hard-tabs in Erlang source code.
    - New: Improved electric key behaviour for Erlang: